# Gpop

./: Bar.cpp  Bar.hpp  CMakeLists.txt  Doxyfile  Gnuplot.cpp  Gnuplot.hpp  Hist.cpp  Hist.hpp  Pie.cpp  Pie.hpp  README.md  Series.cpp  Series.hpp  Series.md  Vector.cpp  Vector.hpp  test0.cpp  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test19.cpp  test2.cpp  test22.cpp  test24.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test9.cpp
docs/: Pie.md  Pie_tuto.md  Series.md  Series_tuto.md  Vector.md  _bar_8hpp_source.html  _gnuplot_8hpp_source.html  _hist_8hpp_source.html  _pie_8hpp_source.html  _series_8hpp_source.html  _vector_8hpp_source.html  annotated.html  class_gnuplot-members.html  class_gnuplot.html  class_gpop_1_1_bar-members.html  class_gpop_1_1_bar.html  class_gpop_1_1_bin-members.html  class_gpop_1_1_bin.html  class_gpop_1_1_data-members.html  class_gpop_1_1_data.html  class_gpop_1_1_hist-members.html  class_gpop_1_1_hist.html  class_gpop_1_1_item-members.html  class_gpop_1_1_item.html  class_gpop_1_1_pie-members.html  class_gpop_1_1_pie.html  class_gpop_1_1_series-members.html  class_gpop_1_1_series.html  class_gpop_1_1_vector-members.html  class_gpop_1_1_vector.html  class_gpop_1_1_vector_element-members.html  class_gpop_1_1_vector_element.html  class_gpop_1_1_x_y-members.html  class_gpop_1_1_x_y.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_261c62883dc45b6408c6b81bf20121a8.html  dir_2689363c618387fb031a03633a7e4566.html  dir_27b46d9a629fbcca21e036dcf90df5ed.html  dir_4fef79e7177ba769987a8da36c892c5f.html  (+17 more)
docs/html/: _gnuplot_8hpp_source.html  _pie_8hpp_source.html  _series_8hpp_source.html  _vector_8hpp_source.html  annotated.html  class_gnuplot-members.html  class_gnuplot.html  class_item-members.html  class_item.html  class_pie-members.html  class_pie.html  class_series-members.html  class_series.html  class_vector-members.html  class_vector.html  class_vector_element-members.html  class_vector_element.html  class_x_y-members.html  class_x_y.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  md_README.html  md_Series.html  md_Series_api.html  md_Series_tuto.html  pages.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  variables_0.js
docs/search/: all_2.js  pages_0.js
include/Gpop/: Bar.hpp
include/gpop/: Bar.hpp  Gnuplot.hpp  Hist.hpp  Pie.hpp  Series.hpp  Vector.hpp
src/: Bar.cpp  Gnuplot.cpp  Hist.cpp  Pie.cpp  Series.cpp  Vector.cpp
test/: CMakeLists.txt  test0.cpp  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test2.cpp  test20.cpp  test21.cpp  test22.cpp  test23.cpp  test24.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
tutorial/: CMakeLists.txt  demo1.cpp  demo2.cpp  test0.cpp  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
