cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_FLAGS "-Wall -g")

add_executable(test0 test0.cpp		../src/Series.cpp)
add_executable(test1 test1.cpp 		../src/Gnuplot.cpp)
add_executable(test2 test2.cpp 		../src/Series.cpp)
add_executable(test3 test3.cpp 		../src/Series.cpp)
add_executable(test4 test4.cpp 		../src/Series.cpp)
add_executable(test5 test5.cpp 		../src/Series.cpp)
add_executable(test6 test6.cpp 		../src/Pie.cpp)
add_executable(test7 test7.cpp 		../src/Series.cpp)
add_executable(test8 test8.cpp 		../src/Series.cpp)
add_executable(test9 test9.cpp 		../src/Vector.cpp)
add_executable(test10 test10.cpp	../src/Pie.cpp)
add_executable(test11 test11.cpp 	../src/Hist.cpp)
add_executable(test12 test12.cpp 	../src/Bar.cpp)
add_executable(test13 test13.cpp 	../src/Pie.cpp)
add_executable(test14 test14.cpp 	../src/Pie.cpp)
add_executable(test15 test15.cpp 	../src/Bar.cpp)
add_executable(test16 test16.cpp 	../src/Bar.cpp)
add_executable(test17 test17.cpp 	../src/Series.cpp)
add_executable(test18 test18.cpp 	../src/Series.cpp)
add_executable(test19 test19.cpp 	../src/Series.cpp)
add_executable(test20 test20.cpp 	../src/Series.cpp)
add_executable(test21 test21.cpp 	../src/Series.cpp)
add_executable(test22 test22.cpp 	../src/Series.cpp)
add_executable(test23 test23.cpp 	../src/Hist.cpp)
add_executable(test24 test24.cpp 	../src/Hist.cpp)

