cmake_minimum_required(VERSION 3.5)

add_definitions("-std=c++11")

add_executable(test0  test0.cpp) 
add_executable(test1  test1.cpp)
add_executable(test2  test2.cpp) 
add_executable(test3  test3.cpp) 
add_executable(test4  test4.cpp) 
add_executable(test5  test5.cpp) 
add_executable(test6  test6.cpp) 
add_executable(test7  test7.cpp) 
add_executable(test8  test8.cpp) 
add_executable(test9  test9.cpp) 
add_executable(test10 test10.cpp) 
add_executable(test11 test11.cpp) 
add_executable(test12 test12.cpp) 
add_executable(test13 test13.cpp) 
add_executable(test14 test14.cpp) 
add_executable(test15 test15.cpp) 
add_executable(test16 test16.cpp) 
add_executable(test17 test17.cpp) 
add_executable(test18 test18.cpp) 
add_executable(demo1  demo1.cpp) 
add_executable(demo2  demo2.cpp) 

target_link_libraries(test0  gpop)
target_link_libraries(test1  gpop)
target_link_libraries(test2  gpop)
target_link_libraries(test3  gpop)
target_link_libraries(test4  gpop)
target_link_libraries(test5  gpop)
target_link_libraries(test6  gpop)
target_link_libraries(test7  gpop)
target_link_libraries(test8  gpop)
target_link_libraries(test9  gpop)
target_link_libraries(test10 gpop)
target_link_libraries(test11 gpop)
target_link_libraries(test12 gpop)
target_link_libraries(test13 gpop)
target_link_libraries(test14 gpop)
target_link_libraries(test15 gpop)
target_link_libraries(test16 gpop)
target_link_libraries(test17 gpop)
target_link_libraries(test18 gpop)
target_link_libraries(demo1  gpop)
target_link_libraries(demo2	 gpop)
